Updating the chart

--- a/DOM Manipulation/style.css
+++ b/DOM Manipulation/style.css
@@ -8,3 +8,11 @@
     text-decoration: line-through;
     opacity: 50%;
 }
+
+.win {
+    background-color: red;
+}
+
+.loss {
+    background-color: blue;
+}
